# Evidence_Rank

./: .dockerignore  .gitignore  Dockerfile  JUDGE_README.md  README.md  config.yaml  pyproject.toml  requirements-freeze.txt  requirements.txt  run.py
Submissions/: EvidenceRank_Approach_Deck.pptx  final_submission_safety_report.json  ranked_candidates.csv  reproducibility_manifest.json  score_breakdown.csv  top_candidate_proofs.jsonl
docs/: approach_deck.md  architecture_diagram.mmd  demo_script.md  evidence_flow_diagram.mmd  faq_for_judges.md  judge_walkthrough.md  methodology.md  scoring_pipeline_diagram.mmd  submission_checklist.md  submission_format.md
src/: __init__.py  ablation_evaluator.py  anomaly_rules.py  artifact_hasher.py  audit_report.py  baseline_ranker.py  benchmark_cases.py  candidate_loader.py  candidate_profiler.py  career_evidence.py  deck_exporter.py  deck_materials.py  demo_exporter.py  diagram_generator.py  evidence_calibrator.py  explanation_cards.py  feature_store.py  final_submission_freeze.py  hireability_calibrator.py  honeypot_firewall.py  jd_constraints.py  jd_parser.py  judge_packet.py  proof_graph.py  ranking_output.py  reproducibility.py  risk_reranker.py  runtime_profiler.py  schema_inspector.py  scoring_engine.py  semantic_matcher.py  submission_packager.py  submission_safety.py  submission_validator.py  text_normalizer.py  transliterator.py  utils.py  weight_sensitivity.py
tests/: test_ablation_evaluator.py  test_anomaly_rules.py  test_artifact_hasher.py  test_audit_report.py  test_baseline_ranker.py  test_benchmark_cases.py  (+26 more)
(+3 files in other folders)
