[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evidencerank"
version = "1.0.0"
description = "CPU-only offline candidate proof and ranking engine"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "PyYAML>=6.0,<7.0",
  "psutil>=5.9,<8.0",
  "python-pptx>=0.6.23,<2.0",
  "reportlab>=4.0,<5.0",
  "scikit-learn>=1.4,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]
parquet = ["pyarrow>=14.0,<22.0"]
large-json = ["ijson>=3.2,<4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
